src/auryn/air/snapshots/auryn__auryn__air__tests__intrinsics-2.snap
---
source: src/auryn/air/mod.rs
expression: "compile_wrapped(\"let a: []I64 = arrayOf(1, 2, 3)\")"
---
AirOutput {
    air: Air {
        functions: {
            AirFunctionId(
                AirStaticValueId(
                    SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            4,
                        ),
                    },
                ),
            ): AirFunction {
                type: Computed(
                    FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    4,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                ),
                unresolved_type: Function {
                    parameters_reference: SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            105553116266498,
                        ),
                    },
                    parameters: [],
                    return_type: None,
                    reference: UserDefined(
                        AirFunctionId(
                            AirStaticValueId(
                                SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        4,
                                    ),
                                },
                            ),
                        ),
                    ),
                },
                ident: "main",
                blocks: {
                    AirBlockId(
                        0,
                    ): AirBlock {
                        nodes: [
                            AirNode {
                                id: SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        211106232532993,
                                    ),
                                },
                                kind: Assignment(
                                    Assignment {
                                        target: AirLocalValueId(
                                            0,
                                        ),
                                        expected_type: Some(
                                            Array(
                                                SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: Some(
                                                        233259355700033,
                                                    ),
                                                },
                                                Ident(
                                                    SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: Some(
                                                            233259355700034,
                                                        ),
                                                    },
                                                    "I64",
                                                ),
                                            ),
                                        ),
                                        expression: AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: Some(
                                                    242381229945283,
                                                ),
                                            },
                                            type: Computed(
                                                Array(
                                                    TypeId {
                                                        id: SyntaxId {
                                                            file_id: None,
                                                            number: Some(
                                                                2,
                                                            ),
                                                        },
                                                        kind: "auryn::auryn::air::typecheck::types::ArrayType",
                                                    },
                                                ),
                                            ),
                                            kind: Call(
                                                Call {
                                                    function: AirExpression {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: Some(
                                                                242381229945286,
                                                            ),
                                                        },
                                                        type: Computed(
                                                            Intrinsic(
                                                                TypeId {
                                                                    id: SyntaxId {
                                                                        file_id: None,
                                                                        number: Some(
                                                                            3,
                                                                        ),
                                                                    },
                                                                    kind: "auryn::auryn::air::typecheck::types::IntrinsicType",
                                                                },
                                                            ),
                                                        ),
                                                        kind: Variable(
                                                            Intrinsic(
                                                                ArrayOf,
                                                            ),
                                                        ),
                                                    },
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: Some(
                                                                    244531386017381,
                                                                ),
                                                            },
                                                            type: Computed(
                                                                I64,
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    1,
                                                                ),
                                                            ),
                                                        },
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: Some(
                                                                    245117792218859,
                                                                ),
                                                            },
                                                            type: Computed(
                                                                I64,
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    2,
                                                                ),
                                                            ),
                                                        },
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: Some(
                                                                    245704198420337,
                                                                ),
                                                            },
                                                            type: Computed(
                                                                I64,
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    3,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    },
                                ),
                            },
                        ],
                        finalizer: Return(
                            Null(
                                SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        211106232532991,
                                    ),
                                },
                            ),
                        ),
                    },
                },
            },
        },
        ..
    },
    diagnostics: Diagnostics {
        diagnostics: [],
    },
}
